<resources>
    <string name="app_name">MIUI.us Toolbox</string>
    <string name="pref_statusbar_settings_title">Status Bar Mods</string>
    <string name="pref_centerclock_on_text">On</string>
    <string name="pref_centerclock_off_text">Off</string>
    <string name="pref_centerclock_title">Center clock</string>
    <string name="pref_centerclock_summary">Display the clock in the center of the status bar</string>
    <string name="pref_key_hide_ampm">pref_key_hide_ampm</string>
    <string name="pref_hide_ampm_title">Hide am/pm</string>
    <string name="pref_hide_ampm_summary">Hides the am/pm text when using 12H clock format</string>
    <string name="pref_signalbars_on_text">On</string>
    <string name="pref_signalbars_off_text">Off</string>
    <string name="pref_signalbars_title">Single signal bars</string>
    <string name="pref_signalbars_summary">Display single signal bars for CDMA devices</string>
    <string name="pref_use_custom_carrier_title">Custom carrier label</string>
    <string name="pref_use_custom_carrier_summary">Use a custom carrier lable when enabled.</string>
    <string name="pref_custom_carrier_label_title">Custom label</string>
    <string name="carrier_label_settings_title">Carrier label settings</string>
    <string name="statusbar_prefs_key">statusbar_prefs_key</string>
    <string name="pref_use_carrier_logo_title">Custom carrier logo</string>
    <string name="pref_use_carrier_logo_summary">Use a custom image as a carrier logo when enabled.</string>
    <string name="pref_cpugovernor_title">CPU Governor</string>
    <string name="pref_cpugovernor_summary">Select the CPU governor to use.</string>
    <string name="cpu_prefs_key">cpu_prefs_key</string>
    <string name="pref_cpu_settings_title">CPU Settings</string>
    <string name="pref_cpu_min_freq_title">Min frequency</string>
    <string name="pref_cpu_max_freq_title">Max frequency</string>
    <string name="pref_cpu_restore_title">Restore on boot</string>
    <string name="pref_cpu_restore_summary">Restore cpu settings after device boots</string>
    <string name="pref_credits_title">Credits</string>
    <string name="pref_credits_summary">See who helped make this all possible.</string>
    <string name="home_prefs_key">home_prefs_key</string>
    <string name="pref_home_settings_title">Miui Launcher Settings</string>
    <string name="hide_statusbar_pref_key">pref_key_hidestatusbar</string>
    <string name="pref_hidestatusbar_title">Hide status bar</string>
    <string name="pref_hidestatusbar_summary">Hides the status bar in MIUI launcher</string>
    <string name="hide_shortcut_text_pref_key">pref_key_shortcut_text</string>
    <string name="pref_hide_shortuct_text_title">Hide icon text labels</string>
    <string name="pref_hide_shortuct_text_summary">Hides the text labels used for shortucts on the homescreen</string>
    <string name="allow_rotation_pref_key">pref_key_allow_rotation</string>
    <string name="pref_allowrotation_title">Allow rotation</string>
    <string name="pref_allowrotation_summary">Allows MIUI launcher to rotate into landscape orientation.</string>
    <string name="resize_widgets_pref_key">pref_key_resize_widgets</string>
    <string name="pref_resize_widgets_title">Resize widgets</string>
    <string name="pref_resize_widgets_summary">Allows MIUI launcher to resize any widget.</string>
    <string name="navbar_prefs_key">navbar_prefs_key</string>
    <string name="pref_navbar_settings_title">Navigation bar settings</string>
    <string name="pref_showsearch_title">Search button</string>
    <string name="pref_showsearch_summary">Include a search button in the navigation bar</string>
    <string name="pref_navbar_order_title">Navbar button order</string>
    <string name="pref_navbar_order_summary">Customize the layout order of the buttons in the navbar</string>
    <string name="performance_prefs_key">performance_prefs_key</string>
    <string name="pref_performance_title">System settings</string>
    <string name="pref_key_lockscreen_show_home">pref_key_lockscreen_show_home</string>
    <string name="pref_lockscreen_show_home_title">Lockscreen home button</string>
    <string name="pref_lockscreen_show_home_summary">Enable the home button on the lockscreen</string>
    <string name="pref_key_remove_recents">pref_key_remove_recents</string>
    <string name="pref_remove_recents_title">Remove recents button</string>
    <string name="pref_remove_recents_summary">Remove recents button, using long pressing of home button instead.</string>
    <string name="enable_navbar_prefs_key">enable_navbar_pref_key</string>
    <string name="pref_enable_navbar_title">Enable navbar</string>
    <string name="pref_enable_navbar_summary">Enable the navbar on devices that normally do not need it</string>
    <string name="pref_key_navbar_height">pref_key_navbar_height</string>
    <string name="navbar_height_title">Navbar Height</string>
    <string name="navbar_height_summary">Change the height of the navbar.</string>
    <string name="colors_prefs_key">colors_prefs_key</string>
    <string name="pref_colors_settings_title">Custom Color Settings</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#FF000000</string>
    <string name="set">Set</string>
    <string name="ics_color">!!!</string>
    <string name="pref_key_color_profiles">pref_key_color_profiles</string>
    <string name="pref_color_profiles_title">Color profiles</string>
    <string name="pref_color_profiles_summary">Load a color profile</string>
    <string name="calibration_prefs_key">calibration_prefs_key</string>
    <string name="calibration_settings_title">Battery calibration</string>
    <string name="battery_calibration_step1">1) Plug device into charger</string>
    <string name="battery_calibration_step2">2) Allow battery to charge to 100%</string>
    <string name="battery_calibration_step3">3) Click \'Calibrate Battery\' button</string>
    <string name="battery_calibration_step4">4) Unplug your device</string>
    <string name="button_calibrate_battery">Calibrate Batery</string>
    <string name="button_override">Step 2 Overide</string>
    <string name="battery_info_text">Battery: </string>
    <string name="android_id_prefs_key">android_id_pref_key</string>
    <string name="android_id_settings_title">Android ID tool</string>
    <string name="error_copying_binary">There was an error trying to copy the sqlite3 binary.</string>
    <string name="dialog_root_required_title">Root Required</string>
    <string name="dialog_root_required_body">Root permissions are required in order for this app to perform it\'s functions.  Root permissions were not granted or root is not possible on this device.</string>
    <string name="dialog_update_id_failure_title">Update failure</string>
    <string name="dialog_update_id_failure_body">Unfortunately the updating of the ID was not successful. Please contact the developer.</string>
    <string name="id_backup_exists">No backup exists</string>
    <string name="android_id_title">Current ID</string>
    <string name="android_backup_id_title">Saved ID</string>
    <string name="button_backup_id">Save current ID</string>
    <string name="button_restore_id">Restore saved ID</string>
    <string name="media_scanner_prefs_key">media_scanner_pref_key</string>
    <string name="media_scanner_settings_title">Invoke media scanner</string>
    <string name="logcat_prefs_key">logcat_pref_key</string>
    <string name="logcat_settings_title">Logcat tool</string>
    <string name="pt_fast_charge_boot">Fast Charge</string>
    <string name="ps_fast_charge_boot">Enable fast charge at boot</string>
    <string name="fast_charge_warning">YOU WILL NOT BE ABLE TO CONNECT TO YOUR PC AFTER EACH REBOOT!\n\nThis setting will set fast charge ON after each reboot. While fast charge is on, you can *only* charge your phone!</string>
    <string name="fast_charge_notification_title">Fast Charge is ON!</string>
    <string name="fast_charge_notification_message">Phone is in charge-only mode!</string>
    <string name="kernel">Kernel Tweaks (if supported)</string>
    <string name="color_tuning_title_head">Color Multipliers Tuning</string>
    <string name="color_tuning_summary_head">Calibrate multipliers screen color</string>
    <string name="gamma_tuning_title_head">Color Gamma Tuning</string>
    <string name="gamma_tuning_summary_head">Calibrate gamma color correction</string>
    <string name="color_red_title">Red</string>
    <string name="color_green_title">Green</string>
    <string name="color_blue_title">Blue</string>
    <string name="reset_defaults">Reset to Defaults</string>
    <string name="adb_wifi_prefs_key">adb_wifi_prefs_key</string>
    <string name="adb_wifi_prefs_title">ADB over WiFi settings</string>
    <string name="pref_key_enable_adb_wifi">pref_key_enable_adb_wifi</string>
    <string name="pref_enable_adb_wifi_title">ADB over WiFi</string>
    <string name="pref_eanble_adb_wifi_summary">Enables connecting to device using adb via WiFi</string>
    <string name="pref_key_adb_port">pref_key_adb_port</string>
    <string name="pref_adb_port_title">Port number</string>
    <string name="pref_adb_port_summary">Port number to use to connect to adbd on device.</string>
    <string name="default_adb_port">5555</string>
    <string name="pref_key_instructions">pref_key_instructions</string>
    <string name="pref_adb_instructions_title">How-to</string>
    <string name="pref_adb_instructions_summary">To connect use:\nadb connect %1$s:%2$d</string>
    <string name="pref_key_adb_wifi_on_boot">pref_key_adb_wifi_on_boot</string>
    <string name="pref_adb_on_boot_title">Enable on boot</string>
    <string name="pref_adb_on_boot_summary">Enables ADB via WiFi when device boots.</string>
    <string name="adb_widget_addr_text">addr:</string>
    <string name="adb_widget_port_text">port:</string>
    <string name="development_prefs_key">development_prefs_key</string>
    <string name="development_prefs_title">Development settings</string>
    <string name="pref_key_enable_mount_logging">pref_key_enable_mount_log</string>
    <string name="pref_enable_mount_log_title">Storage mount logging</string>
    <string name="pref_eanble_mount_log_summary">Enables logging of storage mount changes.</string>
    <string name="default_button_text">Default</string>
    <string name="custom_button_text">Custom</string>
    <string name="okay_button_text">OK</string>
    <string name="lcd_density_prefs_key">lcd_density_prefs_key</string>
    <string name="pref_lcd_density_summary">Adjust the DPI specified in build.prop (changes require a reboot)</string>
    <string name="pref_lcd_density_title">Screen DPI</string>
    <string name="recovery_selection_prefs_key">recovery_selection_prefs_key</string>
    <string name="pref_recovery_selection_summary">Select the custom recovery installed on this device</string>
    <string name="pref_recovery_selection_title">Recovery type</string>
    <string name="screen_size_prefs_key">screen_size_prefs_key</string>
    <string name="pref_screen_size_summary">Select the screen size you would like your device to be seen as by other apps</string>
    <string name="pref_screen_size_title">Screen size spoof</string>
    <string name="dismiss_button_text">Got it!</string>
    <string name="tip_description">The MIUI.us Toolbox has plenty\nof settings for you to use.\n\nYou can check them out by\nswiping left or right.\n\nGo ahead and, explore them all.</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_logcat">LogcatActivity</string>
    <string name="default_hotspot_height">10</string>
</resources>