<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="pref_key_main_settings">

    <PreferenceScreen
        android:fragment="us.miui.toolbox.StatusBarPrefFragment"
        android:key="@string/statusbar_prefs_key"
        android:title="@string/pref_statusbar_settings_title" >
    </PreferenceScreen>
    
    <PreferenceScreen
        android:fragment="us.miui.toolbox.NavbarPrefFragment"
        android:key="@string/navbar_prefs_key"
        android:title="@string/pref_navbar_settings_title" >
    </PreferenceScreen>
    
    <PreferenceScreen
        android:fragment="us.miui.toolbox.CustomColorsPrefFragment"
        android:key="@string/colors_prefs_key"
        android:title="@string/pref_colors_settings_title" >
    </PreferenceScreen>
    
    <PreferenceScreen
        android:fragment="us.miui.toolbox.MiuiHomePrefFragment"
        android:key="@string/home_prefs_key"
        android:title="@string/pref_home_settings_title" >
    </PreferenceScreen>

    <PreferenceScreen
        android:fragment="us.miui.toolbox.CPUBarPrefFragment"
        android:key="@string/cpu_prefs_key"
        android:title="@string/pref_cpu_settings_title" >
    </PreferenceScreen>

<!--    
    <Preference
        android:key="pref_key_credits"
        android:summary="@string/pref_credits_summary"
        android:title="@string/pref_credits_title" />
-->
</PreferenceScreen>