<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000" >
    
    <TextView android:id="@+id/id_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/android_id_title" />

    <TextView android:id="@+id/current_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/id_title"
        android:textColor="#0F0"
        android:textSize="20dp"
        android:text="@string/android_id_title" />

    <LinearLayout android:id="@+id/no_backup_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/current_id"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:visibility="gone" >
        
    	<ImageView android:id="@+id/backup_exists_icon"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:src="@drawable/warning_small" />
    
    	<TextView android:id="@+id/backup_exists_text"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="5dp"
        	android:textColor="#FFF"
        	android:textStyle="bold"
        	android:text="@string/id_backup_exists" />
    
    </LinearLayout>
    
    <RelativeLayout android:id="@+id/backup_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/current_id"
        android:layout_centerHorizontal="true"
        android:visibility="gone" >
        
    	<TextView android:id="@+id/backup_id_title"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
        	android:textColor="#FFF"
        	android:textStyle="bold"
        	android:textSize="20dp"
        	android:text="@string/android_backup_id_title" />

    	<TextView android:id="@+id/backup_id"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_centerHorizontal="true"
        	android:layout_below="@+id/backup_id_title"
        	android:textColor="#0F0"
        	android:textSize="20dp"
        	android:text="@string/android_backup_id_title" />

    </RelativeLayout>
    
    <Button android:id="@+id/backup_id_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:text="@string/button_backup_id"
         />
    
    <Button android:id="@+id/restore_id_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/backup_id_button"
        android:layout_marginTop="15dp"
        android:text="@string/button_restore_id" />
    
    
</RelativeLayout>